Acerca de + pantallas listas para programar en el taller

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,14 @@
     <string name="action_settings">Ajustes</string>
     <string name="action_about">Acerca de</string>
     <string name="share_tittle">Comparte el taller de android</string>
-    <string name="share_techfest">¡Estoy en el #TallerAndroidTechfest y es la caña! #MasAllaDelHolaMundo #Android #Techfest @techfestUPV </string>
+    <string name="share_techfest">¡Estoy en el #TallerAndroidTechfest y es la caña! #MasAllaDelHolaMundo #Android #TechfestUPV @techfestUPV </string>
     <string name="hola_mundo">¡Hola Mundo!</string>
     <string name="compartir">Compartir</string>
     <string name="mas_alla">Ver más allá</string>
     <string name="loading">Cargando...</string>
-
-    <!-- pantalla ver más allá -->
+    <string name="techfest2015">Techfest 2015</string>
     <string name="mas_alla_title">Más allá del hola mundo</string>
+    <string name="mas_alla_title2">Taller de programación Android</string>
 
 
 </resources>
